# Artificial_Intelligence

Lab_4/TSP_GA_AI/: TSP_GA_AI.sln  TSP_GA_AI.vcxproj  header.h  main.cpp
Lab_4/TSP_GA_AI/x64/Debug/: TSP_GA_AI.exe.recipe  TSP_GA_AI.ilk  TSP_GA_AI.vcxproj.FileListAbsolute.txt  vc143.idb
Lab_4/TSP_GA_AI/x64/Debug/TSP_GA_AI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TSP_GA_AI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TSP_GeneticAlgorithm/: CMakeLists.txt  header.h  main.cpp  progress.txt  progressAv.txt
